--- a/calendar.html
+++ b/calendar.html
@@ -12,9 +12,12 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <!-- jQuery Timepicker CSS & JS -->
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+
+  <!-- Select2 (for a stylable custom dropdown) -->
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
   <link rel="stylesheet" href="style.css">
 
@@ -36,14 +39,20 @@
     .delete-booking { margin-top: 0.5rem; background: #c00; color: white; border: none; padding: 0.25rem 0.5rem; cursor: pointer; border-radius: 4px; }
     .delete-booking:hover { background: #a00; }
 
-    /* Dropdown option colors (incl. pink) */
+    /* Class names you assign to <option> are read by Select2 templates */
     option.red { color: red; }
     option.blue { color: blue; }
     option.green { color: green; }
     option.grey { color: grey; }
     option.black { color: black; }
-    option.white { color: #555; } /* readable "white" */
-    option.pink { color: hotpink; } /* added per your request */
+    option.white { color: #555; }
+    option.pink { color: hotpink; }
+
+    /* Select2: ensure our dropdown matches the app typography */
+    .select2-container .select2-selection--single { height: 40px; }
+    .select2-container .select2-selection__rendered { line-height: 40px; }
+    .select2-container .select2-selection__arrow { height: 40px; }
+    .select2-results__option { padding: 6px 10px; }
 
     /* Highlight for current user's bookings in FullCalendar */
     .fc-event.my-booking {
@@ -52,7 +61,7 @@
       border-left: 4px solid #1890ff;             /* accent bar */
       font-weight: 600;
     }
-    .fc-event.other-booking { /* inherit default styles */ }
+    .fc-event.other-booking { /* inherit FullCalendar default */ }
 
     /* Badge for sidebar */
     .badge-mine {
@@ -82,7 +91,7 @@
     <div class="form-row">
       <label>
         Select a Vehicle:
-        <!-- Kept as-is (only fixed a missing closing </option> for CMU241) -->
+        <!-- KEPT EXACTLY AS YOU POSTED -->
         <select id="vehicle-select" required>
           <option value="01-20 2021 Red Traverse CM335" class="red" data-display="2021 Traverse (CM335)">2021 Traverse (Red)</option>
           <option value="02-20 2021 Black Traverse CM366" class="black" data-display="2021 Traverse (CM366)">2021 Traverse (Black)</option>
@@ -90,8 +99,8 @@
           <option value="04-21 2021 Shadow Silverado 1500 CM695" data-display="2021 Silverado 1500 (CM695)">2021 Silverado 1500 (Shadow)</option>
           <option value="05-21 2021 Ebony Buick Encore CM532" class="black" data-display="2021 Buick Encore (CM532)">2021 Buick Encore (Ebony)</option>
           <option value="07-20 2020 Grey Grand Caravan CMU407" class="pink" data-display="2020 Grey Grand Caravan (CMU407)">2020 Grey Grand Caravan (CMU407)</option>
-          <option value="10-20 2020 White Terrain CMU239" class="pink" data-display="2020 White Terrain (CMU239)" >2020 White Terrain (CMU239)</option>
-          <option value="11-20 2020 Black Terrain CMU241" class="pink" data-display="2020 Black Terrain (CMU241)" >2020 Black Terrain (CMU241)</option>
+          <option value="10-20 2020 White Terrain CMU239" class="pink" data-display="2020 White Terrain (CMU239)">2020 White Terrain (CMU239)</option>
+          <option value="11-20 2020 Black Terrain CMU241" class="pink" data-display="2020 Black Terrain (CMU241)">2020 Black Terrain (CMU241)</option>
           <option value="09-24 2024 White Sierra 3500 C182B" class="black" data-display="2024 Sierra 3500 (C182B)">2024 Sierra 3500 (White)</option>
           <option value="10-24 2025 Green Trailblazer C838B" class="green" data-display="2025 Trailblazer (C838B)">2025 Trailblazer (Green)</option>
           <option value="11-24 2024 Grey Traverse CS266" class="grey" data-display="2024 Traverse (CS266)">2024 Traverse (Grey)</option>
@@ -129,7 +138,6 @@
 
     <button id="bookVehicleBtn" class="action-button">Book Vehicle</button>
 
-    <!-- (Optional) small legend -->
     <div style="margin: 8px 0; font-size: 13px;">
       <span class="badge-mine">Your booking</span> shown with a blue edge & light tint on the calendar.
     </div>
@@ -156,10 +164,9 @@
 <script type="module">
   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
   import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
-  import { getDatabase, ref, get, push, set, update, remove }
-    from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
+  import { getDatabase, ref, get, push, set, update, remove } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
 
-  // ─── your Firebase config ───────────────────────────────────────────────
+  // ─── Firebase config ───────────────────────────────────────────────
   const firebaseConfig = {
     apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
     authDomain: "yfned-fleet-nfc.firebaseapp.com",
@@ -191,6 +198,54 @@
   const dateBookingsListEl    = document.getElementById('date-bookings-list');
   let lastClickedDayEl        = null;
 
+  // ---- helpers for the Select2 templates ----
+  function optionColorFromClass(optEl) {
+    if (!optEl) return null;
+    if (optEl.classList.contains('pink')) return 'hotpink';
+    if (optEl.classList.contains('red')) return 'red';
+    if (optEl.classList.contains('blue')) return 'blue';
+    if (optEl.classList.contains('green')) return 'green';
+    if (optEl.classList.contains('grey')) return 'grey';
+    if (optEl.classList.contains('black')) return 'black';
+    if (optEl.classList.contains('white')) return '#555';
+    return null;
+  }
+
+  // Fallback: rewrite visible text to data-display on plain <select> (in case Select2 fails)
+  function rewriteOptionLabelsFromDataset() {
+    document.querySelectorAll('#vehicle-select option').forEach(opt => {
+      if (opt.dataset.display) opt.textContent = opt.dataset.display;
+    });
+  }
+
+  // Build Select2 with colored items + data-display labels
+  function initVehicleSelect2() {
+    // Ensure labels reflect data-display before Select2 reads them
+    rewriteOptionLabelsFromDataset();
+
+    $('#vehicle-select').select2({
+      width: '100%',
+      templateResult: function (state) {
+        if (!state.id) return state.text;
+        const el = state.element;
+        const color = optionColorFromClass(el);
+        const text  = el?.dataset?.display || state.text;
+        const $node = $('<span></span>').text(text);
+        if (color) $node.css('color', color);
+        return $node;
+      },
+      templateSelection: function (state) {
+        if (!state.id) return state.text;
+        const el = state.element;
+        const color = optionColorFromClass(el);
+        const text  = el?.dataset?.display || state.text;
+        const $node = $('<span></span>').text(text);
+        if (color) $node.css('color', color);
+        return $node;
+      }
+    });
+  }
+
   onAuthStateChanged(auth, user => {
     if (!user) {
       window.location.href = 'index.html';
@@ -211,18 +266,20 @@
       scrollbar: true
     });
 
+    // turn the native select into a stylable dropdown
+    initVehicleSelect2();
+
     initCalendar();
 
     // Set heading immediately to friendly label (no flash of raw key)
     setHeadingFromSelect();
     // Then fetch status to append "Signed Out by ..." if needed
-    updateVehicleHeading(vehicleSelect.value);
+    updateVehicleHeading($('#vehicle-select').val());
 
-    vehicleSelect.addEventListener('change', async () => {
-      // Immediate heading update to friendly label
-      setHeadingFromSelect();
-      // Then refresh with actual status from Firebase
-      await updateVehicleHeading(vehicleSelect.value);
+    // When the selection changes
+    $('#vehicle-select').on('change', async () => {
+      setHeadingFromSelect();                       // instant UI label
+      await updateVehicleHeading($('#vehicle-select').val()); // status from Firebase
       calendar.refetchEvents();
     });
 
@@ -236,15 +293,15 @@
 
   // Immediate heading setter using data-display only
   function setHeadingFromSelect() {
-    const name = vehicleSelect.value;
-    const selectedOpt = vehicleSelect.querySelector(`option[value="${name}"]`);
+    const name = $('#vehicle-select').val();
+    const selectedOpt = document.querySelector(`#vehicle-select option[value="${CSS.escape(name)}"]`);
     const displayName = selectedOpt?.dataset.display || name;
     vehicleHeading.textContent = `${displayName} schedule: …`;
   }
 
   // Use data-display for heading text; show status from Firebase
   async function updateVehicleHeading(name) {
-    const selectedOpt = vehicleSelect.querySelector(`option[value="${name}"]`);
+    const selectedOpt = document.querySelector(`#vehicle-select option[value="${CSS.escape(name)}"]`);
     const displayName = selectedOpt?.dataset.display || name;
 
     const snap = await get(ref(db, 'vehicles/' + name));
@@ -281,7 +338,7 @@
   }
 
   async function fetchVehicleBookings(_, success) {
-    const vehicle = vehicleSelect.value;
+    const vehicle = $('#vehicle-select').val();
     if (!vehicle) return success([]);
     const snap = await get(ref(db, 'bookings/' + vehicle));
     if (!snap.exists()) return success([]);
@@ -331,9 +388,8 @@
       btn.addEventListener('click', async e => {
         const id = e.target.dataset.id;
         if (!confirm('Are you sure you want to remove this booking?')) return;
-        await remove(ref(db, 'bookings/' + vehicleSelect.value + '/' + id));
+        await remove(ref(db, 'bookings/' + $('#vehicle-select').val() + '/' + id));
         calendar.refetchEvents();
-        // re-render sidebar for the same date
         const ds = selectedDateTextEl.textContent;
         displayBookingsForDay(getEventsForDate(new Date(ds)), ds);
       });
@@ -361,7 +417,7 @@
 
   // ■■■■ multi-day booking (manual parse) ■■■■
   async function handleMultiDayBooking() {
-    const vehicle = vehicleSelect.value;
+    const vehicle = $('#vehicle-select').val();
     if (!vehicle) { alert('No vehicle selected.'); return; }
 
     const startVal = bookingStartDateInput.value;
